# osiris

./: .gitignore  README.md  data.db  index.html  package-lock.json  package.json  vite.config.ts  webpack.renderer.config.js
.github/workflows/: build-windows.yml  build.yml  main.yml
src/: App.svelte  App.tsx  index.html  index.jsx  input.css  main.js  main.ts  main.tsx  preload.js  renderer.js  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  content.rs  db.rs  encryption.rs  main.rs  users.rs
src/components/: Account.jsx  ActivationDetails.jsx  ActivationForm.jsx  AdminSidebar.tsx  App.jsx  AppHeader.tsx  BrandLogo.tsx  ContentBrowser.tsx  FeatureCard.jsx  FileBrowserView.tsx  Home.jsx  Login.jsx  ProductActivation.jsx  Report.jsx  Security.jsx  Settings.jsx  Sidebar.jsx  SignUp.jsx  SubjectContent.jsx  SubjectSidebar.jsx  Support.jsx  UserForm.tsx  UserList.tsx  Users.jsx
src/components/ui/: AppShell.tsx  AuthLayout.tsx  Button.tsx  Card.tsx  DecorativeBackground.tsx  InputField.tsx  LoadingOverlay.tsx  ThemeToggle.tsx  WelcomeBanner.tsx
src/constants/: theme.ts
src/contexts/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/lib/: Activation.svelte  Dirrectory.svelte  Home.svelte  Login.svelte
src/lib/components/: Footer.svelte  Navbar.svelte  (+1 more)
src/pages/: ActivationPage.tsx  ContentPathPage.tsx  HomePage.tsx  LoginPage.tsx  NewActivationForm.tsx  QuizPage.tsx  ReactivationForm.tsx  SettingsPage.tsx  Users.tsx
src/stores/: progressStore.js
src/utils/: contentImages.ts
