[package]
name = "osiris"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.29.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
mac_address = "1.1.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tauri-plugin-dialog = "2"

