[package]
name = "osiris"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
mac_address = "1.1.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tauri-plugin-dialog = "2"
open = "5.0"
aes = "0.8.3"
cbc = { package = "cbc", version = "0.1.2" }
rand = "0.8.5"
sha2 = "0.10.8"
walkdir = "2.4.0"
log = "0.4.21"
tauri-plugin-log = "2.4.0"
